# flowbiz-ai-core

./: .dockerignore  .env.example  .gitignore  .pr-analysis  .trigger_ci  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TIKTOK_ROUTING_README.md  docker-compose.override.prod.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
docs/: ADMIN_UI_SPEC.md  ADR_SYSTEM_NGINX.md  AGENT_NEW_PROJECT_CHECKLIST.md  AGENT_ONBOARDING.md  AGENT_QUICK_REFERENCE.md  AGENT_RUNTIME_MIGRATION.md  API_DEPRECATION_POLICY.md  API_GATEWAY_DESIGN.md  API_PLAYGROUND_SPEC.md  ARCHITECTURE.md  CLIENT_PROJECT_TEMPLATE.md  CLIENT_VPS_REQUIREMENTS.md  CODEX_AGENT_BEHAVIOR_LOCK.md  CODEX_PREFLIGHT.md  CODEX_SYSTEM_NGINX_FIRST.md  COST_OPTIMIZATION.md  CRM_INTEGRATION_SPEC.md  DEPLOYMENT.md  DEPLOYMENT_VPS.md  DOCS_SITE_SPEC.md  EMAIL_AGENT_SPEC.md  EXAMPLE_AGENTS.md  EXAMPLE_WORKFLOWS.md  GA_RELEASE_CHECKLIST.md  GOVERNANCE_AUTOMATION.md  GUARDRAILS.md  HEALTH_DASHBOARD_DESIGN.md  INCIDENT_RUNBOOK.md  INFRASTRUCTURE_README.md  LINE_OA_CONNECTOR_SPEC.md  LOCAL_DEV_KIT.md  MARKETPLACE_UI_DESIGN.md  MULTI_TENANT_DEPLOY_SPEC.md  ONBOARDING_FLOW.md  PAYMENT_GATEWAY_SPEC.md  PROJECT_CONTRACT.md  PR_LOG.md  PR_STATE.md  RELEASE_ROLLBACK_RUNBOOK.md  REUSABLE_DEPLOYMENT.md  (+17 more)
fastapi/: __init__.py  testclient.py
infra/: nginx.conf
nginx/: default.conf.template  nginx.conf
scripts/: check_tools.py  deploy_tiktok_routing.sh  fix-ssh-folder.ps1  guardrails_check.sh  guardrails_pr_check.py  release_preflight.ps1  smoke_prod_api.ps1  (+1 more)
(+140 files in other folders)
