[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flowbiz-ai-core"
version = "0.0.0"
description = "FlowBiz AI Core monorepo skeleton"
authors = [{ name = "flowbiz.cloud" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "pydantic-settings",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]
